kube-manifests/01-Deployment-and-LoadBalancer-Service-Ingress-for-Dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: acrforaksdemo34.azurecr.io/custom2aksnginxapp1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-loadbalancer-service-dev
  labels:
    app: app1-nginx
spec:
  type: ClusterIP
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-nginx-dev
spec:
  rules:
  - host: dev.alpercan.site
    http:
      paths:
      - backend:
          service:
            name: app1-nginx-loadbalancer-service-dev
            port:
              number: 80
        path: /
        pathType: Prefix
